Se modifico el footer

--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
     </main>
 
     <footer>
-        <h2>Información del Desarrollador</h2>
-        <p>Nombre: Julio Vargas</p>
-        <p>Correo: jvargas59@cuc.edu.co</p>
-        <p>Sitio Web: <a href="https://www.linkedin.com/in/julio-vargas-26b17b347/" target="_blank">https://www.linkedin.com/in/julio-vargas-26b17b347/</a></p>
+        <h2>Información de los Desarrolladores</h2>
+        <div class="developers-info">
+            <div class="developer">
+                <p>Nombre: Julio Vargas</p>
+                <p>Correo: jvargas59@cuc.edu.co</p>
+            </div>
+            <div class="developer">
+                <p>Nombre: Anthony Duran</p>
+                <p>Correo: aduran18@cuc.edu.co</p>
+            </div>
+        </div>
         <p>Derechos Reservados &copy; 2025</p>
     </footer>
 
